--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyPortfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Bas</a>
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="#">Skill</a>
+            <a href="#">Education</a>
+            <a href="#">Experiecne</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
     
 </body>
 </html>
