--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyPortfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <title>Portfolio Website</title>
 </head>
 <body>
     <header>
         <a href="#" class="logo">Bas</a>
+
         <nav>
-            <a href="#"class="active">Home</a>
-            <a href="#">Skill</a>
-            <a href="#">Education</a>
-            <a href="#">Experiecne</a>
-            <a href="#">Contact</a>
+            <a href="#" class="active"> Home</a>
+            <a href="#" >Skills</a>
+            <a href="#" >Education</a>
+            <a href="#" >Experience</a>
+            <a href="#" >Contact</a>
         </nav>
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="p.png">
+            <img src="p.png" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Bas</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p>No comment</p>
+            <p>~~~~~~~~~~~~</p>
             <div class="social-icons">
-                <a href="mailto:baskunx@icloud.com"><i class="bi bi-envelope"></i></a>
-                <a href="https://github.com/baskunx"><i class="fa-brands fa-square-github"></i></a>
+                <a href="mailto:baskunx@icloud.com"><i class="fa-solid fa-envelope"></i></a>
+                <a href="https://github.com/baskunx"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100034486553293"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/_baskunx/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/_baskunx?igsh=cWUydHV5anpzdWlr&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Accept Me</a>
+            <a href="#" class="btn">Accept me</a>
         </div>
     </section>
 </body>
