--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <a href="#" class="logo">Bas</a>
 
         <nav>
-            <a href="#" class="active"> Home</a>
-            <a href="#" >Skills</a>
-            <a href="#" >Education</a>
-            <a href="#" >Experience</a>
-            <a href="#" >Contact</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\index.html" class="active"> Home</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\skills.html" >Skills</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\education.html" >Education</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\experience.html" >Experience</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\contact.html" >Contact</a>
         </nav>
     </header>
     <section class="home">
