--- a/skills.html
+++ b/skills.html
@@ -5,18 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="skills.css">
     <title>MySkills</title>
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Bas</a>
+        <a href="#" class="logo">BS</a>
 
         <nav>
-            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\index.html" class="active"> Home</a>
-            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\skills.html" >Skills</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\index.html" > Home</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\skills.html" class="active">Skills</a>
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\education.html" >Education</a>
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\experience.html" >Experience</a>
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\contact.html" >Contact</a>
         </nav>
     </header>
+    <section class="home">
+            <h3 class="typing-text">My Skills<span></span></h3>
+            <div>
+                <a href="#"><img src="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\Html.jfif" class="image"></a>
+                <a href="#"><img src="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\Css.jfif"class="image"></a>         
+                <a href="#"><img src="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\JS.jfif"class="image"></a> <br>
+                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                <a href="#"><img src="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\pphp.jfif"class="image"></a>
+                <a href="#"><img src="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\python.jfif"class="image"></a>
+            </div>
+    </section>
