--- a/education.html
+++ b/education.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Bas</a>
+        <a href="#" class="logo">BS</a>
 
         <nav>
-            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\index.html" class="active"> Home</a>
-            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\skills.html" >Skills</a>
-            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\education.html" >Education</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\index.html"> Home</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\skills.html">Skills</a>
+            <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\education.html"  class="active" >Education</a>
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\experience.html" >Experience</a>
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\contact.html" >Contact</a>
         </nav>
