--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Bas</a>
+        <a href="#" class="logo">BS</a>
 
         <nav>
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\index.html" class="active"> Home</a>
@@ -25,7 +25,7 @@
             <img src="p.png" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi, It's <span>Bas</span></h1>
+            <h1>Hi, It's <span>BS</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>~~~~~~~~~~~~</p>
             <div class="social-icons">
