--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="p.png" alt="">
+            <img src="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\Killua.jfif" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>BS</span></h1>
