--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="https://www.facebook.com/profile.php?id=100034486553293"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/_baskunx?igsh=cWUydHV5anpzdWlr&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Accept me</a>
+            <!--<a href="#" class="btn">Accept me</a> -->
         </div>
     </section>
 </body>
