--- a/education.html
+++ b/education.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="education.css">
     <title>Education</title>
 </head>
 <body>
     <header>
         <a href="#" class="logo">BS</a>
-
         <nav>
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\index.html"> Home</a>
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\skills.html">Skills</a>
@@ -20,3 +19,9 @@
             <a href="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\contact.html" >Contact</a>
         </nav>
     </header>
+    <section class="home">
+        <div class="comment">
+            <h1>My Education</h1>
+            <p>~~~~~~~~~~~~~~~~~!!</p>
+        </div>
+    </section>
