--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="C:\Users\Baskunx\Desktop\Baskunx\my-portfplio\Killua.jfif" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi, It's <span>BS</span></h1>
+            <h1>Hi, I'm<span>Jesada</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>~~~~~~~~~~~~</p>
             <div class="social-icons">
